force-app/main/default/objects/Intake_Form_2__c/Intake_Form_2__c.object-meta.xml
<CustomObject>
    <label>Intake Form 2</label>
    <nameField>
        <label>Intake Form 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intake Form 2&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>