force-app/main/default/objects/Intake_Form_2__c/fields/Additional_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_2__c</fullName>
    <label>Additional Email 2 (optional)</label>
    <type>Email</type>
</CustomField>