force-app/main/default/objects/Intake_Form_2__c/fields/Additional_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone_Number__c</fullName>
    <label>Additional Phone Number</label>
    <type>Phone</type>
</CustomField>