force-app/main/default/objects/Intake_Form_2__c/fields/Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Date__c</fullName>
    <label>Admission Date</label>
    <type>Date</type>
</CustomField>