force-app/main/default/objects/Intake_Form_2__c/fields/Anything_Else_to_Discuss__c.field-meta.xml
<CustomField>
    <fullName>Anything_Else_to_Discuss__c</fullName>
    <label>Anything Else to Discuss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>