force-app/main/default/objects/Intake_Form_2__c/fields/CHHA_LHCSA__c.field-meta.xml
<CustomField>
    <fullName>CHHA_LHCSA__c</fullName>
    <label>CHHA/LHCSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>