force-app/main/default/objects/Intake_Form_2__c/fields/Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Completed_by__c</fullName>
    <label>Completed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>