force-app/main/default/objects/Intake_Form_2__c/fields/Concerns_Side_Effects_to_Medication__c.field-meta.xml
<CustomField>
    <fullName>Concerns_Side_Effects_to_Medication__c</fullName>
    <label>Concerns/Side Effects to Medication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>