force-app/main/default/objects/Intake_Form_2__c/fields/Diagnosis_Reason__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Reason__c</fullName>
    <label>Diagnosis/Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>