force-app/main/default/objects/Intake_Form_2__c/fields/Ethnicity_Race__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Race__c</fullName>
    <label>Ethnicity/Race</label>
    <length>255</length>
    <type>Text</type>
</CustomField>