force-app/main/default/objects/Intake_Form_2__c/fields/Feeling_Nervous_Anxious_Or_On_Edge__c.field-meta.xml
<CustomField>
    <fullName>Feeling_Nervous_Anxious_Or_On_Edge__c</fullName>
    <label>Feeling Nervous, Anxious, Or On Edge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not at all</fullName>
            </value>
            <value>
                <fullName>Several days</fullName>
            </value>
            <value>
                <fullName>More than half the days</fullName>
            </value>
            <value>
                <fullName>Nearly every day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>