force-app/main/default/objects/Intake_Form_2__c/fields/Feeling_Since_Discharged__c.field-meta.xml
<CustomField>
    <fullName>Feeling_Since_Discharged__c</fullName>
    <label>Feeling Since Discharged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Much better</fullName>
            </value>
            <value>
                <fullName>Better</fullName>
            </value>
            <value>
                <fullName>About the same</fullName>
            </value>
            <value>
                <fullName>Worse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>