force-app/main/default/objects/Intake_Form_2__c/fields/Feet__c.field-meta.xml
<CustomField>
    <fullName>Feet__c</fullName>
    <label>Feet</label>
    <length>5</length>
    <type>Text</type>
</CustomField>