force-app/main/default/objects/Intake_Form_2__c/fields/Felt_Down_Depressed_or_Hopeless__c.field-meta.xml
<CustomField>
    <fullName>Felt_Down_Depressed_or_Hopeless__c</fullName>
    <label>Felt Down, Depressed, or Hopeless</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not at all</fullName>
            </value>
            <value>
                <fullName>Several days</fullName>
            </value>
            <value>
                <fullName>More than half the days</fullName>
            </value>
            <value>
                <fullName>Nearly every day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>