force-app/main/default/objects/Intake_Form_2__c/fields/Home_Care_Services__c.field-meta.xml
<CustomField>
    <fullName>Home_Care_Services__c</fullName>
    <label>Home Care Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>