force-app/main/default/objects/Intake_Form_2__c/fields/Inches__c.field-meta.xml
<CustomField>
    <fullName>Inches__c</fullName>
    <label>Inches</label>
    <length>255</length>
    <type>Text</type>
</CustomField>