force-app/main/default/objects/Intake_Form_2__c/fields/Is_the_discharge_summary_available__c.field-meta.xml
<CustomField>
    <fullName>Is_the_discharge_summary_available__c</fullName>
    <label>Is the discharge summary available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>