force-app/main/default/objects/Intake_Form_2__c/fields/Lbs__c.field-meta.xml
<CustomField>
    <fullName>Lbs__c</fullName>
    <label>Lbs</label>
    <length>10</length>
    <type>Text</type>
</CustomField>