force-app/main/default/objects/Intake_Form_2__c/fields/Main_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Main_Phone_Number__c</fullName>
    <label>Main Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>