force-app/main/default/objects/Intake_Form_2__c/fields/New_Medications_Prescribed__c.field-meta.xml
<CustomField>
    <fullName>New_Medications_Prescribed__c</fullName>
    <label>New Medications Prescribed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>