force-app/main/default/objects/Intake_Form_2__c/fields/No_Medical_Equipment__c.field-meta.xml
<CustomField>
    <fullName>No_Medical_Equipment__c</fullName>
    <label>No Medical Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>