force-app/main/default/objects/Intake_Form_2__c/fields/No_Taking_Medications__c.field-meta.xml
<CustomField>
    <fullName>No_Taking_Medications__c</fullName>
    <label>No Taking Medications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>