force-app/main/default/objects/Intake_Form_2__c/fields/Not_Being_Able_To_Stop_Control_Worrying__c.field-meta.xml
<CustomField>
    <fullName>Not_Being_Able_To_Stop_Control_Worrying__c</fullName>
    <label>Not Being Able To Stop/Control Worrying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not at all</fullName>
            </value>
            <value>
                <fullName>Several days</fullName>
            </value>
            <value>
                <fullName>More than half the days</fullName>
            </value>
            <value>
                <fullName>Nearly every day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>