force-app/main/default/objects/Intake_Form_2__c/fields/Paperwork_Received__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Received__c</fullName>
    <label>Paperwork Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>