force-app/main/default/objects/Intake_Form_2__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Intake Form 2&apos;s</relationshipLabel>
    <relationshipName>Intake_Form_2_s</relationshipName>
    <type>Lookup</type>
</CustomField>