force-app/main/default/objects/Intake_Form_2__c/fields/Perform_Daily_Activities__c.field-meta.xml
<CustomField>
    <fullName>Perform_Daily_Activities__c</fullName>
    <label>Perform Daily Activities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, without any difficulty</fullName>
            </value>
            <value>
                <fullName>Yes, but with some difficulty</fullName>
            </value>
            <value>
                <fullName>No, I need assistance</fullName>
            </value>
            <value>
                <fullName>No, I am unable to perform my daily activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>