force-app/main/default/objects/Intake_Form_2__c/fields/Pleasure_In_Doing_Things__c.field-meta.xml
<CustomField>
    <fullName>Pleasure_In_Doing_Things__c</fullName>
    <label>Pleasure In Doing Things</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not at all</fullName>
            </value>
            <value>
                <fullName>Several days</fullName>
            </value>
            <value>
                <fullName>More than half the days</fullName>
            </value>
            <value>
                <fullName>Nearly every day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>