force-app/main/default/objects/Intake_Form_2__c/fields/Preferred_Pharmacy_Address__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pharmacy_Address__c</fullName>
    <label>Preferred Pharmacy Address</label>
    <type>Address</type>
</CustomField>