force-app/main/default/objects/Intake_Form_2__c/fields/Preferred_Pharmacy_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pharmacy_Name__c</fullName>
    <label>Preferred Pharmacy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>