force-app/main/default/objects/Intake_Form_2__c/fields/Preferred_Pharmacy_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pharmacy_Phone_Number__c</fullName>
    <label>Preferred Pharmacy Phone Number</label>
    <type>Phone</type>
</CustomField>