force-app/main/default/objects/Intake_Form_2__c/fields/Primary_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Doctor__c</fullName>
    <label>Primary Doctor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>