force-app/main/default/objects/Intake_Form_2__c/fields/Primary_Doctor_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Doctor_Address__c</fullName>
    <label>Primary Doctor Address</label>
    <type>Address</type>
</CustomField>