force-app/main/default/objects/Intake_Form_2__c/fields/Primary_Doctor_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Doctor_Phone_Number__c</fullName>
    <label>Primary Doctor Phone Number</label>
    <type>Phone</type>
</CustomField>