force-app/main/default/objects/Intake_Form_2__c/fields/Reason_for_Admission__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Admission__c</fullName>
    <label>Reason for Admission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>