force-app/main/default/objects/Intake_Form_2__c/fields/Received_and_Understand_DC_Meds__c.field-meta.xml
<CustomField>
    <fullName>Received_and_Understand_DC_Meds__c</fullName>
    <label>Received and Understand DC Meds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, completely</fullName>
            </value>
            <value>
                <fullName>Yes, somewhat</fullName>
            </value>
            <value>
                <fullName>No, not at all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>