force-app/main/default/objects/Intake_Form_2__c/fields/Someone_To_Assist__c.field-meta.xml
<CustomField>
    <fullName>Someone_To_Assist__c</fullName>
    <label>Someone To Assist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>