force-app/main/default/objects/Intake_Form_2__c/fields/TCM_Appointment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>TCM_Appointment_Scheduled__c</fullName>
    <label>TCM Appointment Scheduled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>