force-app/main/default/objects/Intake_Form_2__c/fields/Type_of_Smoker__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Smoker__c</fullName>
    <label>Type of Smoker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>