force-app/main/default/objects/Intake_Form_2__c/fields/Who_did_you_speak_to__c.field-meta.xml
<CustomField>
    <fullName>Who_did_you_speak_to__c</fullName>
    <label>Who did you speak to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>