force-app/main/default/objects/Intake_Form_2__c/fields/Worsening_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Worsening_Symptoms__c</fullName>
    <label>Worsening Symptoms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>