force-app/main/default/objects/Intake_Form_2__c/fields/Yes_Anything_Else_to_Discuss__c.field-meta.xml
<CustomField>
    <fullName>Yes_Anything_Else_to_Discuss__c</fullName>
    <label>Yes Anything Else to Discuss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>