force-app/main/default/objects/Intake_Form_2__c/fields/Yes_Community_Resources__c.field-meta.xml
<CustomField>
    <fullName>Yes_Community_Resources__c</fullName>
    <label>Yes Community Resources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>