force-app/main/default/objects/Intake_Form_2__c/fields/Yes_Concerns_or_Questions__c.field-meta.xml
<CustomField>
    <fullName>Yes_Concerns_or_Questions__c</fullName>
    <label>Yes Concerns or Questions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>