force-app/main/default/objects/Intake_Form_2__c/fields/Yes_Concerns_Side_Effects_to_Medication__c.field-meta.xml
<CustomField>
    <fullName>Yes_Concerns_Side_Effects_to_Medication__c</fullName>
    <label>Yes Concerns/Side Effects to Medication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>