force-app/main/default/objects/Intake_Form_2__c/fields/Yes_Home_Care_Services__c.field-meta.xml
<CustomField>
    <fullName>Yes_Home_Care_Services__c</fullName>
    <label>Yes Home Care Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>