force-app/main/default/objects/Intake_Form_2__c/fields/Yes_Other_Medications_Prescribed__c.field-meta.xml
<CustomField>
    <fullName>Yes_Other_Medications_Prescribed__c</fullName>
    <label>Yes Other Medications Prescribed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>