force-app/main/default/objects/Intake_Form_2__c/fields/Yes_Self_Care_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Yes_Self_Care_Instructions__c</fullName>
    <label>Yes Self Care Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>