force-app/main/default/objects/Intake_Form_2__c/fields/Yes_Someone_To_Assist__c.field-meta.xml
<CustomField>
    <fullName>Yes_Someone_To_Assist__c</fullName>
    <label>Yes Someone To Assist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>