force-app/main/default/objects/Intake_Form_2__c/fields/Yes_Worsening_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Yes_Worsening_Symptoms__c</fullName>
    <label>Yes Worsening Symptoms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>